--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,26 +2,25 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
-
-env:
-  IMAGE_NAME: shaluaugustine/final-project-devops-tcs
-  REGISTRY: docker.io
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set image tags
-        id: meta
-        run: |
-          SHA_SHORT=${GITHUB_SHA::7}
-          echo "TAG=latest" >> $GITHUB_OUTPUT
-          echo "SHA_TAG=${SHA_SHORT}" >> $GITHUB_OUTPUT
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Build JAR with Maven
+        run: ./mvnw package -DskipTests
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -34,6 +33,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.TAG }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.SHA_TAG }}
+          tags: docker.io/shaluaugustine/final-project-devops-tcs:latest
