--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: '21'
 
       - name: Build JAR with Maven
-        run: ./mvnw package -DskipTests
+        run: mvn package -DskipTests
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
